[package]
name = "crawl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.8", features = [
    "derive",
    "unicode",
    "wrap_help",
] }
color-eyre = "0.6.1"
eyre = "0.6.8"
flume = "0.10.13"
futures = "0.3.21"
log = "0.4.17"
pretty_env_logger = "0.4.0"
reqwest = "0.11.11"
scraper = "0.13.0"
tokio = { version = "1.19.2", features = ["macros", "rt-multi-thread"] }
url = "2.2.2"
